<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_view_hint_add_crime"
        android:gravity="center"
        android:textSize="30sp"/>

    <ImageView
        android:id="@+id/imageViewHint"
        android:layout_width="40dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_hint_for_adding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHint"
        android:contentDescription="@string/icon_for_hint_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_first_crime"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/cardview_light_background"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHint" />
</androidx.constraintlayout.widget.ConstraintLayout>